# mt2py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
dev/: paramset_dev.py
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
examples/: ex0_folder_utils.py  ex1_basic_moose.py  ex1a_basic_moose.py  ex1b_basic_moose_parallel.py  ex1b_basic_moose_read.py  ex1c_basic_moose_parallel.py  ex1d_basic_moose_parallel_read.py  ex2_basic_gmsh.py  ex3_basic_moose_and_gmsh.py  ex3a_basic_moose_and_gmsh.py  ex3b_basic_moose_and_gmsh_read.py  ex3c_basic_moose_and_gmsh_parallel.py  ex3d_basic_moose_and_gmsh_parallel_read.py  ex4_basic_moose_optimiser.py  ex4a_basic_moose_optimiser.py  ex5_basic_geometry_optimiser.py  ex5a_basic_geometry_optimiser.py  ex7_configured_moose_optimiser_to_data.py
examples/FEMU/: ex0_folder_utils.py  ex1b_basic_moose_read.py  ex1c_basic_moose_parallel.py  ex1d_basic_moose_parallel_read.py  ex3b_basic_moose_and_gmsh_read.py  ex3c_basic_moose_and_gmsh_parallel.py  (+4 more)
scripts/: circ_geom_coarse.py  ex0_structure.yaml  ex0a_structure.yaml  ex1_linear_elastic.i  ex1_neml_elastic.i  ex1_tjoint_viscoplastic.i  ex2_circ_viscoplastic.i  ex2_gmsh.py  ex2_neml_visco.i  ex3_linear_elastic_mesh.i  ex3_tjoint_rate_indep_isoharden.i  ex5_simple_geometry.i  ex5_simple_geometry.py  ex6_base_config.yaml  ex6_mat_opt_base.py  ex7_base_config.yaml  ex7_linear_elastic.i  ex7_mat_opt_base.py  t_joint.py  tjoint_rate_indep_isoharden.i
tests/: test_mt2py.py  test_optimiser.py  test_parameters.py  test_runner.py
(+51 files in other folders)
