[tool.poetry]
name = "mt2py"
version = "0.1.0"
description = "Materials Testing 2.0 using Python"
authors = ["Rory Spencer"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
